--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>学マス ダメージ最適化 & 比較</title>
-            <link rel="manifest" href="./manifest.json">
+            <title>学マス スコア最適化 & 比較</title>
+            <link rel="manifest" href="/gakmas-score-calculator/manifest.json">
             <meta name="theme-color" content="#1976d2">
             <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
             <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
