Update icon and service worker paths in index.html

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
             <title>学マス スコア最適化 & 比較</title>
             <link rel="manifest" href="/gakmas-score-calculator/manifest.json">
             <meta name="theme-color" content="#1976d2">
-            <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
-            <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
+            <link rel="icon" type="image/png" sizes="192x192" href="/gakmas-score-calculator/icon-192.png">
+            <link rel="icon" type="image/png" sizes="512x512" href="/gakmas-score-calculator/icon-512.png">
             <!-- Apple PWA Support -->
             <meta name="apple-mobile-web-app-capable" content="yes">
             <meta name="apple-mobile-web-app-status-bar-style" content="default">
             <meta name="apple-mobile-web-app-title" content="GakmasCalc">
-            <link rel="apple-touch-icon" href="icon-192.png">
+            <link rel="apple-touch-icon" href="/gakmas-score-calculator/icon-192.png">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -1509,7 +1509,7 @@
         <script>
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', function() {
-                    navigator.serviceWorker.register('./service-worker.js')
+                    navigator.serviceWorker.register('/gakmas-score-calculator/service-worker.js')
                         .then(function(registration) {
                             console.log('ServiceWorker registration successful:', registration);
                         })
