HTMLのメタタグとスタイルの整形を修正し、可読性を向上

--- a/index.html
+++ b/index.html
@@ -3,22 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>学マス スコア最適化 & 比較</title>
-            <link rel="manifest" href="manifest.json">
-            <meta name="theme-color" content="#1976d2">
-            <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
-            <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
-            <!-- Apple PWA Support -->
-            <meta name="mobile-web-app-capable" content="yes">
-            <meta name="apple-mobile-web-app-status-bar-style" content="default">
-            <meta name="apple-mobile-web-app-title" content="GakmasCalc">
-            <link rel="apple-touch-icon" href="icon-192.png">
+        <title>学マス スコア最適化 & 比較</title>
+        <link rel="manifest" href="manifest.json">
+        <meta name="theme-color" content="#1976d2">
+        <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+        <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="default">
+        <meta name="apple-mobile-web-app-title" content="GakmasCalc">
+        <link rel="apple-touch-icon" href="icon-192.png">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&display=swap"
-            rel="stylesheet"
-        />
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&display=swap" rel="stylesheet" />
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script>
@@ -55,9 +51,7 @@
         <style>
             body {
                 font-family: "Noto Sans JP", sans-serif;
-                transition:
-                    background-color 0.3s,
-                    color 0.3s;
+                transition: background-color 0.3s, color 0.3s;
             }
             /* トグルスイッチの動作 */
             .toggle-checkbox:checked {
@@ -67,7 +61,6 @@
             .toggle-checkbox:checked + .toggle-label {
                 background-color: #ea580c;
             }
-
             /* カスタムスクロールバー（ダークモード用） */
             .dark ::-webkit-scrollbar {
                 width: 8px;
